<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:paddingTop="28dp"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="28dp">

        <TextView
            android:id="@+id/hi_clarencc"
            android:layout_width="121dp"
            android:layout_height="27dp"
            android:gravity="center_horizontal|top"
            android:text="@string/hi_clarencc"
            android:textAppearance="@style/hi_clarencc"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/baseline_notifications_none_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/some_id"
        android:layout_width="178dp"
        android:layout_height="68dp"
        android:layout_marginTop="51.5dp"
        android:gravity="top"
        android:text="@string/some_id"
        android:textAppearance="@style/some_id"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
        android:layout_marginHorizontal="28dp"
        />



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/some_id"
        android:layout_marginTop="18dp"
        android:layout_marginHorizontal="28dp">
        
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <androidx.constraintlayout.widget.Guideline
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/guideline"
                app:layout_constraintGuide_percent="0.5"
                android:orientation="vertical" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="170dp"
                android:layout_height="115dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/pay_money"
                app:layout_constraintEnd_toEndOf="@id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />

            <TextView
                android:id="@+id/pay_money_title"
                android:layout_width="105dp"
                android:layout_height="27dp"
                android:text="@string/pay_money_title"
                android:textAppearance="@style/pay_money_title"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/imageView"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/pay_money_content"
                android:layout_width="152dp"
                android:layout_height="44dp"
                android:text="@string/pay_money_content"
                android:textAppearance="@style/pay_money_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/pay_money_title"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="170dp"
                android:layout_height="115dp"
                android:layout_marginStart="10dp"
                android:src="@drawable/request_money"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/request_money_title"
                android:layout_width="152dp"
                android:layout_height="27dp"
                android:text="@string/request_money_title"
                android:textAppearance="@style/request_money_title"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toTopOf="@+id/imageView2"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/request_money_content"
                android:layout_width="152dp"
                android:layout_height="44dp"
                android:text="@string/request_money_content"
                android:textAppearance="@style/request_money_content"
                app:layout_constraintStart_toStartOf="@+id/imageView2"
                app:layout_constraintTop_toBottomOf="@+id/request_money_title"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="170dp"
                android:layout_height="181dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="10dp"
                android:src="@drawable/pay_bill"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <TextView
                android:id="@+id/pay_bill"
                android:layout_width="68dp"
                android:layout_height="27dp"
                android:text="@string/pay_bill_title"
                android:textAppearance="@style/pay_bill_title"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toTopOf="@+id/imageView3"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <TextView
                android:id="@+id/pay_bill_content"
                android:layout_width="136dp"
                android:layout_height="44dp"
                android:text="@string/pay_bill_content"
                android:textAppearance="@style/pay_bill_content"
                app:layout_constraintStart_toStartOf="@+id/imageView3"
                app:layout_constraintTop_toBottomOf="@+id/pay_bill"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="170dp"
                android:layout_height="181dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="24dp"
                android:src="@drawable/buy_airtime"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/imageView2" />

            <TextView
                android:id="@+id/buy_airtime_title"
                android:layout_width="110dp"
                android:layout_height="27dp"
                android:text="@string/buy_airtime_title"
                android:textAppearance="@style/buy_airtime_title"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toTopOf="@+id/imageView4" />

            <TextView
                android:id="@+id/buy_airtime_content"
                android:layout_width="152dp"
                android:layout_height="66dp"
                android:text="@string/buy_airtime_content"
                android:textAppearance="@style/buy_airtime_content"
                app:layout_constraintStart_toStartOf="@+id/imageView4"
                app:layout_constraintTop_toBottomOf="@+id/buy_airtime_title"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"/>



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>



    <include layout="@layout/footer"/>


</androidx.constraintlayout.widget.ConstraintLayout>



